<resources>
    <string name="app_name">Sloth</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="let_s_create_an_account">Let\'s create an account</string>
    <string name="firstname">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="welcome_text_maps">Welcome</string>
    <string name="where_to_go">Where to?</string>
    <string name="shop_name">Shop Name</string>
    <string name="category">Category</string>
    <string name="setup_shop">Set up your shop</string>
    <string name="create_shop_description">Shop Description</string>
    <string name="item_name">Item Name</string>
    <string name="price">Enter price</string>
    <string name="add_items">Add</string>

    <string-array name="itemselect">
        <item>Medicines</item>
        <item>Grocery</item>
        <item>Food</item>
    </string-array>
</resources>